code/java/BestExecutionAnalyticsforSmarterTradingBEAST/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Best Execution Analytics for Smarter Trading (BEAST) client library for Java

[![API Version](https://img.shields.io/badge/api-v2.0.0-blue)](https://developer.factset.com/api-catalog/)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/bestexecutionanalyticsforsmartertradingbeast/0.2.0)](https://central.sonatype.com/artifact/com.factset.sdk/bestexecutionanalyticsforsmartertradingbeast/0.2.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Enables clients to programmatically access the underlying data which powers the BEAST Liquidity Analytics (LA) and Transaction Cost Analysis (TCA) applications.

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- SDK version: 0.2.0
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>bestexecutionanalyticsforsmartertradingbeast</artifactId>
  <version>0.2.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:bestexecutionanalyticsforsmartertradingbeast:0.2.0"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.*;
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.auth.*;
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.models.*;
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.api.MarketImpactApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class MarketImpactApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        MarketImpactApi apiInstance = new MarketImpactApi(defaultClient);
        String securityId = "FDS-US"; // String | ISIN for European securities, otherwise TICKER
        String region = "US"; // String | The two character ISO country code of the trading region. EMEA is used for the European trading region
        String currency = "USD"; // String | The ISO 4217 currency code
        Float orderVolume = 100000F; // Float | Order Volume
        String strategy = "vwap"; // String | Specify the strategy, choices are: Optimal, VWAP, TWAP, Custom
        String date = "2024-08-29"; // String | Date in the format YYYY-MM-DD
        String isin = "isin_example"; // String | International securities identification number
        String startTime = "10:00:00"; // String | Start Time in the format HH:MM:SS
        String endTime = "15:00:00"; // String | End Time in the format HH:MM:SS
        Float frontLoadHalfLife = 1000F; // Float | Front Load Half Life
        Float rearLoadHalfLife = 0F; // Float | Rear Load Half Life
        Float rearRatio = 1F; // Float | Rear Ratio
        Float riskAversion = 0.3F; // Float | Risk Aversion
        Boolean applyMomentum = false; // Boolean | Flag to apply stock momentum. Specify true to include momentum
        String side = "side_example"; // String | Indicate whether a buyer or seller. Only applies when applyMomentum is true. Example: Buy or Sell.
        try {
            CostImpactResponseRoot result = apiInstance.getCostImpact(securityId, region, currency, orderVolume, strategy, date, isin, startTime, endTime, frontLoadHalfLife, rearLoadHalfLife, rearRatio, riskAversion, applyMomentum, side);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling MarketImpactApi#getCostImpact");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.*;
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.api.MarketImpactApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

MarketImpactApi apiInstance = new MarketImpactApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.BestExecutionAnalyticsforSmarterTradingBEAST.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/beast/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*MarketImpactApi* | [**getCostImpact**](docs/MarketImpactApi.md#getCostImpact) | **GET** /tca/market-impact/cost-impact | Get Cost Impact
*OrderDetailsApi* | [**getOrderFillCount**](docs/OrderDetailsApi.md#getOrderFillCount) | **GET** /tca/order/fill-count | Get Order Fill Count
*OrderDetailsApi* | [**getOrderIndexETF**](docs/OrderDetailsApi.md#getOrderIndexETF) | **GET** /tca/order/index-etf | Get Index ETF data
*OrderDetailsApi* | [**getOrderInfo**](docs/OrderDetailsApi.md#getOrderInfo) | **GET** /tca/order/order-info | Get Order Information
*OrderDetailsApi* | [**getOrderIntraStats**](docs/OrderDetailsApi.md#getOrderIntraStats) | **GET** /tca/order/intra-order-stats | Get Intra Order Stats
*OrderDetailsApi* | [**getOrderInvestmentTiming**](docs/OrderDetailsApi.md#getOrderInvestmentTiming) | **GET** /tca/order/investment-timing | Get Order Investment Timings
*OrderDetailsApi* | [**getOrderPriceTimeFills**](docs/OrderDetailsApi.md#getOrderPriceTimeFills) | **GET** /tca/order/price-time-fills | Get Price Time Fills
*OrderDetailsApi* | [**getOrderPriceTimeQuotes**](docs/OrderDetailsApi.md#getOrderPriceTimeQuotes) | **GET** /tca/order/price-time-quotes | Get Price Time Quotes
*OrderDetailsApi* | [**getOrderPriceTimeTrades**](docs/OrderDetailsApi.md#getOrderPriceTimeTrades) | **GET** /tca/order/price-time-trades | Get Price Time Trades
*OrderDetailsApi* | [**getOrderVolumePrice**](docs/OrderDetailsApi.md#getOrderVolumePrice) | **GET** /tca/order/volume-price | Get Order Volume Prices
*OrderDetailsApi* | [**getOrderVolumeTime**](docs/OrderDetailsApi.md#getOrderVolumeTime) | **GET** /tca/order/volume-time | Get Order Volume Times
*OrderDetailsApi* | [**getOrderVolumeVenue**](docs/OrderDetailsApi.md#getOrderVolumeVenue) | **GET** /tca/order/volume-venue | Get Order Volume Venues
*OrderSearchApi* | [**getFieldValues**](docs/OrderSearchApi.md#getFieldValues) | **GET** /tca/search/field-values | Get Order field values
*OrderSearchApi* | [**getOrders**](docs/OrderSearchApi.md#getOrders) | **GET** /tca/search/orders | Get Orders by field values
*OutliersApi* | [**getOutlierMetricsByPercentile**](docs/OutliersApi.md#getOutlierMetricsByPercentile) | **GET** /tca/outlier/metrics-by-percentile | Get Outlier Metrics by percentile
*OutliersApi* | [**getOutlierMetricsStandard**](docs/OutliersApi.md#getOutlierMetricsStandard) | **GET** /tca/outlier/metrics-standard | Get Outlier Metrics by standard deviation
*QuoteAnalyticsApi* | [**getQuoteInsideSize**](docs/QuoteAnalyticsApi.md#getQuoteInsideSize) | **GET** /la/quote/inside-size | Get Quote Analytics
*ReportsApi* | [**getParentAggregateAnalysis**](docs/ReportsApi.md#getParentAggregateAnalysis) | **GET** /tca/report/parent-aggregate-analysis | Get Parent Aggregate Analysis
*TradeAnalyticsApi* | [**getTradeAnalytics**](docs/TradeAnalyticsApi.md#getTradeAnalytics) | **GET** /la/trade/trade-analytics | Get Trade Analytics
*TradeAnalyticsApi* | [**getVolumeAnalytics**](docs/TradeAnalyticsApi.md#getVolumeAnalytics) | **GET** /la/trade/volume-analytics | Get Volume Analytics
*ZScoreApi* | [**getZScoreQuotes**](docs/ZScoreApi.md#getZScoreQuotes) | **GET** /la/zscore/quotes | Get Quote Z-Scores
*ZScoreApi* | [**getZScoreTrades**](docs/ZScoreApi.md#getZScoreTrades) | **GET** /la/zscore/trades | Get Trade Z-Scores


## Documentation for Models

 - [CostImpact](docs/CostImpact.md)
 - [CostImpactResponseRoot](docs/CostImpactResponseRoot.md)
 - [Error](docs/Error.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [FieldValuesResponse](docs/FieldValuesResponse.md)
 - [FieldValuesResponseRoot](docs/FieldValuesResponseRoot.md)
 - [IndexETF](docs/IndexETF.md)
 - [IndexETFResponse](docs/IndexETFResponse.md)
 - [IndexETFResponseRoot](docs/IndexETFResponseRoot.md)
 - [IntraOrderStat](docs/IntraOrderStat.md)
 - [IntraOrderStatResponse](docs/IntraOrderStatResponse.md)
 - [IntraOrderStatResponseRoot](docs/IntraOrderStatResponseRoot.md)
 - [InvestmentTiming](docs/InvestmentTiming.md)
 - [InvestmentTimingResponse](docs/InvestmentTimingResponse.md)
 - [InvestmentTimingResponseRoot](docs/InvestmentTimingResponseRoot.md)
 - [MultiDayBenchmarks](docs/MultiDayBenchmarks.md)
 - [Order](docs/Order.md)
 - [OrderFillCountResponse](docs/OrderFillCountResponse.md)
 - [OrderFillCountResponseRoot](docs/OrderFillCountResponseRoot.md)
 - [OrderInfoResponse](docs/OrderInfoResponse.md)
 - [OrderInfoResponseRoot](docs/OrderInfoResponseRoot.md)
 - [OrdersResponse](docs/OrdersResponse.md)
 - [OrdersResponseRoot](docs/OrdersResponseRoot.md)
 - [Outlier](docs/Outlier.md)
 - [OutlierData](docs/OutlierData.md)
 - [OutlierDataResult](docs/OutlierDataResult.md)
 - [OutlierMetrics](docs/OutlierMetrics.md)
 - [OutlierResponse](docs/OutlierResponse.md)
 - [OutlierResponseRoot](docs/OutlierResponseRoot.md)
 - [OutputStrategyBinData](docs/OutputStrategyBinData.md)
 - [PriceTimeFill](docs/PriceTimeFill.md)
 - [PriceTimeFillResponse](docs/PriceTimeFillResponse.md)
 - [PriceTimeFillResponseRoot](docs/PriceTimeFillResponseRoot.md)
 - [PriceTimeQuote](docs/PriceTimeQuote.md)
 - [PriceTimeQuoteResponse](docs/PriceTimeQuoteResponse.md)
 - [PriceTimeQuoteResponseRoot](docs/PriceTimeQuoteResponseRoot.md)
 - [PriceTimeTrade](docs/PriceTimeTrade.md)
 - [PriceTimeTradeResponse](docs/PriceTimeTradeResponse.md)
 - [PriceTimeTradeResponseRoot](docs/PriceTimeTradeResponseRoot.md)
 - [QuoteInsideSize](docs/QuoteInsideSize.md)
 - [QuoteInsideSizeResponse](docs/QuoteInsideSizeResponse.md)
 - [QuoteInsideSizeResponseRoot](docs/QuoteInsideSizeResponseRoot.md)
 - [ReportRecord](docs/ReportRecord.md)
 - [ReportResponse](docs/ReportResponse.md)
 - [ReportResponseRoot](docs/ReportResponseRoot.md)
 - [TradeAnalytic](docs/TradeAnalytic.md)
 - [TradeAnalyticsResponse](docs/TradeAnalyticsResponse.md)
 - [TradeAnalyticsResponseRoot](docs/TradeAnalyticsResponseRoot.md)
 - [VolumeAnalytic](docs/VolumeAnalytic.md)
 - [VolumeAnalyticsResponse](docs/VolumeAnalyticsResponse.md)
 - [VolumeAnalyticsResponseRoot](docs/VolumeAnalyticsResponseRoot.md)
 - [VolumePrice](docs/VolumePrice.md)
 - [VolumePriceBin](docs/VolumePriceBin.md)
 - [VolumePriceMetrics](docs/VolumePriceMetrics.md)
 - [VolumePriceResponse](docs/VolumePriceResponse.md)
 - [VolumePriceResponseRoot](docs/VolumePriceResponseRoot.md)
 - [VolumeTime](docs/VolumeTime.md)
 - [VolumeTimeResponse](docs/VolumeTimeResponse.md)
 - [VolumeTimeResponseRoot](docs/VolumeTimeResponseRoot.md)
 - [VolumeVenue](docs/VolumeVenue.md)
 - [VolumeVenueResponse](docs/VolumeVenueResponse.md)
 - [VolumeVenueResponseRoot](docs/VolumeVenueResponseRoot.md)
 - [ZScore](docs/ZScore.md)
 - [ZScoreResponse](docs/ZScoreResponse.md)
 - [ZScoreResponseRoot](docs/ZScoreResponseRoot.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2025 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
